# genAI-paper-reader

./: .gitignore  README.md  Summarize_individually.py  pyproject.toml
notebooks/: test.ipynb
paperreader/: config.py  llm.py
paperreader/chains/: summarize_article.py
paperreader/models/: controller.py
paperreader/prompts/Example/: config.yaml
paperreader/prompts/SummarizeBriefly/: config.yaml  template.txt
paperreader/utils/: prompts.py
